# game_of_life

./: CMakeLists.txt  README.md
inc/: cell.hpp  grid.hpp  util.hpp
src/: CMakeLists.txt  cell.cpp  connect_ssh.sh  deploy.sh  fetch_results.sh  grid.cpp  main.cpp  run_remote.sh  submit_qsub.sh  submit_to_cluster.sh  util.cpp  visualise_from_data.m
test/: CMakeLists.txt  test.cpp  test_grid_1024.txt  test_grid_large.txt  test_grid_video.txt
