add_executable(game_of_life main.cpp grid.cpp cell.cpp util.cpp)
target_link_libraries(game_of_life ${Boost_LIBRARIES})
configure_file(submit_qsub.sh ${CMAKE_CURRENT_BINARY_DIR}/submit_qsub.sh COPYONLY)
configure_file(deploy.sh ${CMAKE_CURRENT_BINARY_DIR}/deploy.sh COPYONLY)
configure_file(fetch_results.sh ${CMAKE_CURRENT_BINARY_DIR}/fetch_results.sh COPYONLY)
configure_file(run_remote.sh ${CMAKE_CURRENT_BINARY_DIR}/run_remote.sh COPYONLY)
configure_file(visualise_from_data.m ${CMAKE_CURRENT_BINARY_DIR}/visualise_from_data.m COPYONLY)
